--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,7 +8,7 @@
   <body>
     <%- include('../partials/nav.ejs'); %>
     <div class="container mt-4">
-      <h1>Welcome to about page!</h1>
+      <h1>Welcome to about page</h1>
     </div>
   </body>
 </html>
